Segmentation fault when calling add_custom_target (C#)
cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
project(Hello LANGUAGES CSharp)
### Segfault triggered when the target name ends with ".cs"
add_custom_target("foo.cs" ALL DEPENDS "bar")
When running the above CMakeLists.txt, cmake crashes with a segmentation fault. The crash happens only when the target ends with ".cs" and the project has "CSharp" as enabled languages
Edited by smx