VS: Fix crash on CSharp sources in a custom target

The target generator does not compute ClOptions for custom targets,
so we should not use them either.

Fixes: #18377, #18485